Remove google.guava dependency